lox-tests/tests/unexpected_character.stderr
ERROR: Unrecognised character: '|'
 --> 3:7
  |
3 | foo(a | b);
  |       ^

ERROR: Expected ')' after arguments in function call
 --> 3:1
  |
3 | foo(a | b);
  | ^-------^
